# webcam_client

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
test/: calibrate.py  mediapipe_speed.py  receive_speed.py
webcam_client/: bbox_detector.py  detector_client.py  imagezmq.py  mediapipe_detector.py  run_detector_client.py
webcam_client/main/: run_webcam_client.py
