[metadata]
name = webcam_client
home-page = https://github.com/yzqin/webcam_client
version = file: VERSION
license = MIT
author = Yuzhe Qin
author-email = y1qin@ucsd.edu
description = Webcam Client to stream video, process it, and send it to remote server.
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    pyzmq
    simplejpeg
    opencv-python
    mediapipe

[options.entry_points]
console_scripts =
    run_webcam_client = webcam_client.main.run_webcam_client:main
